Fix footer to bottom and result page filters spacing

--- a/app/portal/providers/static/providers/css/base.css
+++ b/app/portal/providers/static/providers/css/base.css
@@ -100,6 +100,9 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
 
 /**
  * Body
@@ -111,6 +114,7 @@ body {
     color: var(--color-3);
     font-family: var(--font-1);
     font-size: var(--font-size);
+    height: 100%;
 }
 
 .body-wrap {
